[tool.poetry]
name = "hkfs"
version = "0.1.0"
description = ""
authors = ["Tom Soulanille <soul@prama.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
blake3 = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
